@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-27T02:05:32Z",
+  "timestamp" : "2022-09-27T08:34:03Z",
   "count_outdated" : 2444,
   "uniques_outdated" : 609,
-  "count" : 2485,
-  "uniques" : 635,
+  "count" : 2486,
+  "uniques" : 636,
   "clones" : [
     {
       "timestamp": "2022-09-13T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 6, 8 ],
       "uniques": 6,
       "uniques_minmax": [ 5, 6 ]
+    },
+    {
+      "timestamp": "2022-09-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
