@@ -1,5 +1,5 @@
 {
-  "count": 41,
+  "count": 42,
   "uniques": 11,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-09-26T00:00:00Z",
       "count": 8,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-09-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
