@@ -1,3 +1,11 @@
+2022-09-27T08:34:03Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3134119285
+* notice: last 14d: unq all: 11 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 609 2444 / 635 2485
+* notice: next accum: outdated-unq outdated-all / unq all: 609 2444 / 636 2486
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-27]
+
 2022-09-27T02:05:32Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3132434162
 * notice: last 14d: unq all: 11 41
